--- a/style1.css
+++ b/style1.css
@@ -11,7 +11,7 @@ body{
     background-color: rgb(222, 226, 219);
 }
 .container{
-    width:300px;
+    width:350px;
     height:350px;
     background-color: chartreuse;
     border-radius: 30px;
@@ -27,9 +27,10 @@ body{
 
 .logo{
     margin-left:30%;
-    margin-top: 10px;
+    margin-top: 20px;
     width:140px;
-    padding-bottom: 5px;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
     border-radius:40%;
 }
 .spanE{
@@ -44,7 +45,7 @@ body{
 }
 @media (max-width:1300px){
     #root{
-        grid-template-columns: repeat(4,1fr);
+        grid-template-columns: repeat(3,1fr);
     }
 }
 @media (max-width:930px){
